--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,3 @@
-:root {
-  --sidebar-width: 300px;
-  --sidebar-bg: #ffffff;
-  --sidebar-hover-bg: #f0f0f0;
-
-  @media (prefers-color-scheme: dark) {
-    --sidebar-bg: #121212;
-    --sidebar-hover-bg: #1e1e1e;
-  }
-}
-
 h1,
 h2,
 h3,
@@ -17,4 +6,17 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+}
+
+.main-content {
+  flex: 1;
+  overflow-y: auto;
+  padding: 1rem;
 }
