feat: enhance player component; add tooltip support and improve layout for better user experience

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,9 @@ p {
   overflow-y: auto;
   padding: 1rem;
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-wrap-mode: nowrap;
+  text-overflow: ellipsis;
+}
